customized intro setion, used grid to position elements, created shadow for image, applied media queries for larger screens at 600px and 900px

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Source+Sans+Pro:ital,wght@0,200;1,200&family=Source+Serif+Pro:ital,wght@1,200&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
 
     </head>
@@ -37,8 +40,8 @@
             <h1 class="section__title section__title--intro">
                 Hi, I am <strong>Raymond Yepiz</strong>
             </h1><!--using double highphen, just like the double underscore it shows that it is a subsection of section__title, not required, just a good tip.-->
-            <p class="section__title section__subtitle--intro">front-end dev</p>
-            <img src="images/blurred_background_ray.jpg" alt="Picture of Raymond Smiling">
+            <p class="section__title section__subtitle--intro">Front-end Developer</p>
+            <img src="images/blurred_background_ray.jpg" alt="Picture of Raymond Smiling" class="intro__img">
         </section>
 
         <!--my services section-->
@@ -137,6 +140,6 @@
     </body>
 </html>
 
-<!--left of at 28.43 on video setting up the customer properties and general styles-->
+<!--left of at 54.25 on video setting up the customer properties and general styles-->
 
 <!--use classes for styleing and use id for anchoring, eithor or works but that's what id's are useful for.-->
