worked on my services section, added focous event, added pseudo class, used flex to organize text

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
             <div class="services">
                 <div class="service">
                     <h3>service 1</h3>
-                    <p></p>
+                    <p>I am a front end developer</p>
                 </div><!--end of service-->
 
                 <div class="service">
                     <h3>service 2</h3>
-                    <p></p>
+                    <p>I have used javascript, html,css, react and more</p>
                 </div><!--end of service-->
 
                 <div class="service">
                     <h3>service 3</h3>
-                    <p></p>
+                    <p>I have done a couple projects</p>
                 </div> <!--end of service-->
 
             </div> <!--end of services-->
