finished services, worked on footer section, used awesome fonts to get icons for github and linkedin. Played around with hover effects and styling

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             <p class="section__subtitle section__subtitle--about">Software Developer out of Phoenix AZ</p>
             
             <div class="about-me__body">
-                <p>about me info</p>
+                <p>about me info: just adding some sample text, I will edit everything inside this paragraph later on. For now I am simply trying to get the styling in so I can see how my profile website will look like.</p>
             </div>
 
-            <img src="images/Zoe_Vianey_Ray.jpg" alt="Picture of Raymond with Family">
+            <img src="images/Zoe_Vianey_Ray.jpg" alt="Picture of Raymond with Family" class="about-me__img">
 
 
         </section>
@@ -88,8 +88,8 @@
 
         <!--work section-->
         <section class="my-work" id="work">
-            <h2 class="section__title">My Work</h2>
-            <p class="section__subtitle"></p>
+            <h2 class="section__title section__title--work">My Work</h2>
+            <p class="section__subtitle section__subtitle--work">A selection of my range of work.</p>
 
             <div class="portfolio">
                 <!--portfolio item-->
@@ -123,15 +123,19 @@
 
 
         <!--footer section-->
-        <footer>
+        <footer class="footer">
             <!--good place for email address-->
-            <a href="" class="footer__link">rayyepiz@icloud.com</a>
+            <a href="" class="footer__link">
+                <!-- <i class="fa-solid fa-envelope footer__link--email">--> 
+                    rayyepiz@icloud.com 
+                <!--</i>-->
+            </a> 
             <ul class="social-list">
                 <li class="social-list__item">
-                    <a class="social-list__link">LinkeDin</a>
+                    <a href="" class="social-list__link"><i class="fa-brands fa-linkedin"></i></a>
                 </li>
                 <li class="social-list__item">
-                    <a class="social-list__link">GitHub</a>
+                    <a href="" class="social-list__link"><i class="fa-brands fa-github"></i></a>
              
             </ul>
         </footer>
