started working on navigation, creaated hamburger using psuedo classes, next I will apply javascript

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <body>
         <header>
             <div class="logo">
-                <img src="" alt="logo">
+                <img src="./images/Zora1.jpg" alt="logo" class="logo__img">
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
-                <span class="hamburger">toggle button</span>
+                <span class="hamburger"></span>
             </button>
             <nav class="nav">
                 <ul class="nav__list"><!--using double underscore states that this is sub component of navigation on bem -->
