--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     </head>
     <body>
+        <!--this is the header section, navigation and such-->
         <header>
             <div class="logo">
                 <img src="./images/Zora1.jpg" alt="logo" class="logo__img">
@@ -65,7 +66,7 @@
 
             </div> <!--end of services-->
 
-            <a href="work" class="btn">My Work</a> <!--link to projects, or services-->
+            <a href="#work" class="btn">My Work</a> <!--link to projects, or services-->
 
         </section>
 
@@ -139,6 +140,10 @@
              
             </ul>
         </footer>
+
+
+
+        <script src="./javascript/app.js"></script>
 
 
     </body>
